--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -4,8 +4,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-top: 41px;
-
+    margin-top: 25px;
+    padding: 30px;
 
 }
 
