--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,14 +11,17 @@
   display: flex;
   justify-content: space-evenly ;
   flex-direction: column;
+ 
 }
 
 body {
   background: linear-gradient(130.02deg, #628E75 0.66%, #1A4855 83.32%);
   min-height: 100vh;
+  font-size: 1.6rem;
 }
 
 .container{
  max-width: 1200px;
  margin: 0 auto;
 }
+
