--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,10 +1,12 @@
 
+
 .conteudo {
   display: flex;
-  margin-top: 160px;
+  margin-top: 130px;
   justify-content: space-between;
   align-items: center;
-  
+  padding: 30px;
+
 }
 
 .informacoes {
@@ -15,7 +17,7 @@
 .informacoes-autor {
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 2.0rem;
   color: #F9F9F9;
 }
 
