--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,14 +1,3 @@
-
-
-.conteudo {
-  display: flex;
-  margin-top: 130px;
-  justify-content: space-between;
-  align-items: center;
-  padding: 30px;
-
-}
-
 .informacoes {
   display: flex;
   flex-direction: column;
@@ -24,24 +13,27 @@
 .informacoes-titulo {
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
-  font-size: 60px;
-  max-width: 360px;
+  font-size: 5.5rem;
+  max-width: 35rem;
   color: #F9F9F9;
 }
 
 .informacoes-descricao {
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1.8rem;
   max-width: 430px;
   color: #F9F9F9;
+  line-height: 2.5rem;
 }
 
 .grupo-botoes {
   display: flex;
   flex-direction: row;
-  gap: 25px;
-  margin-top: 26px;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin-top: 3rem;
+
 
 }
 
@@ -51,22 +43,22 @@
   border: 2px solid #658E76;
   height: 45px;
   transform: skew(-24deg);
-  width: 225px;
+  width: 22.5rem;
   align-items: center;
-  
+
 
 
 }
 
 .botao2 {
-
+ 
   border: 0px;
   background: transparent;
   border: 2px solid #658E76;
   color: #F9F9F9;
   height: 45px;
   transform: skew(-24deg);
-  width: 225px;
+  width: 22.5rem;
 
 
 }
@@ -78,7 +70,7 @@
   gap: 13px;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 1.4rem;
   justify-content: center;
   color: white;
 
@@ -87,4 +79,45 @@
 .botao1:hover {
   background: #578369;
   border: 2px solid #578369;
+}
+
+
+
+@media (min-width: 768px) and (max-width: 1087px) {
+  .conteudo {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: 10px;
+
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+  }
+}
+
+
+@media (min-width: 1088px) {
+  .conteudo {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    margin: 0 auto;
+    
+  }
+}
+
+@media (max-width: 768px) {
+  .conteudo {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 5rem;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+  }
+  
 }
