--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -89,10 +89,11 @@
     flex-direction: column;
     flex-wrap: wrap;
     margin-top: 10px;
-
     justify-content: space-between;
     align-items: center;
     padding: 30px;
+    gap: 2rem;
+
   }
 }
 
@@ -105,6 +106,8 @@
     align-items: center;
     padding: 30px;
     margin: 0 auto;
+    gap: 5rem;
+    margin-top: 80px;
     
   }
 }
